--- a/trunk/govnoquoter/www/templates/css/style.css
+++ b/trunk/govnoquoter/www/templates/css/style.css
@@ -5,7 +5,7 @@ A:hover{color:#8fc6ff}
 .input{border: 1px solid #B9B59C;background: #fff;font-family: Arial, Tahoma, Verdana;font-size: 13px;color: #000}
 .inbutton{border:0px;font-family: Arial, Tahoma, Verdana;font-size: 13px;font-weight: bold;background:#fff;color: #BD0000}
 img{border:0px;vertical-align:middle}
-img,div,li{behavior:url(../images/png.htc)}
+img,div,li{behavior:url(/templates/images/iepngfix/iepngfix.php)}
 
 h1{font-family:Tahoma;font-size:24px;color:#DD8C3E;font-weight:normal; padding:0px 0px 15px 0px; margin:0px}
 
