--- a/trunk/govnoquoter/www/templates/css/style.css
+++ b/trunk/govnoquoter/www/templates/css/style.css
@@ -54,9 +54,9 @@ ul.sub-menu li.right{background:url(../images/sub-menu-right.png) top left no-re
 .rblock h2 span{color:#999;padding:0px 15px 0px 15px;font-weight:normal}
 .rblock tr.content td,.rblock td.empty{background:#fff;}
 .rblock div.colorCode{border: solid 1px #E6D6AC;}
-.rblock table tr td.numbers{background:#E6D6AC;text-align:right;width:50px;font-family:monospace;font-size:13px;line-height:16px;margin-right:5px;vertical-align:top}
-.rblock table tr td.code{font-size:13px;line-height:16px;vertical-align:top;}
-.rblock pre{padding:0px;margin:0px;}
+.rblock table tr td.numbers{background:#E6D6AC;text-align:right;width:50px;font-family:monospace;font-size:13px;line-height:16px;padding-right:5px;vertical-align:top}
+.rblock table tr td.code{font-size:13px;line-height:16px;vertical-align:top; padding-left: 5px;}
+.rblock pre{padding:0px;margin:0px;overflow-x: auto; width: 1048px;}
 .rblock a.more:link,.rblock a.more:visited{display:block;text-decoration:none;border-bottom:1px dotted #dd8c3e;float:left}
 .rblock a.more:hover{border-bottom:1px dotted #8fc6ff}
 .rblock .rate{ float:right}
