--- a/govnoquoter/www/templates/css/style.css
+++ b/govnoquoter/www/templates/css/style.css
@@ -68,3 +68,8 @@ div.footer {
     font-size: 10px;
     color: #3F3F3F;
 }
+
+.pagination{font-size:20px; margin-top: 25px;}
+.pagination span{display:block;margin-right:5px}
+.pagination a:link,.pagination a:visited{display:block;float:left;background:url(../images/page.png) no-repeat;width:39px;text-align:center;height:39px;line-height:39px;margin-right:5px}
+.pagination a.active:link,.pagination a.active:visited{color:#999;text-decoration:none}
