--- a/trunk/govnoquoter/www/templates/css/langs/php.css
+++ b/trunk/govnoquoter/www/templates/css/langs/php.css
@@ -1,9 +1,18 @@
 /**
+ * GeSHi Dynamically Generated Stylesheet
+ * --------------------------------------
+ * Dynamically generated stylesheet for php
+ * CSS class: , CSS id: 
  * GeSHi (C) 2004 - 2007 Nigel McNie, 2007 - 2008 Benny Baumann
  * (http://qbnz.com/highlighter/ and http://geshi.org/)
+ * --------------------------------------
  */
+.php .de1, .php .de2 {font: normal normal 1em/1.2em monospace; margin:0; padding:0; background:none; vertical-align:top;}
 .php  {font-family:monospace;}
 .php .imp {font-weight: bold; color: red;}
+.php li, .php .li1 {font-weight: normal; vertical-align:top;}
+.php .ln {width:1px;text-align:right;margin:0;padding:0 2px;vertical-align:top;}
+.php .li2 {font-weight: bold; vertical-align:top;}
 .php .kw1 {color: #b1b100;}
 .php .kw2 {color: #000000; font-weight: bold;}
 .php .kw3 {color: #990000;}
@@ -31,4 +40,5 @@
 .php .me1 {color: #004000;}
 .php .me2 {color: #004000;}
 .php .re0 {color: #000088;}
+.php .ln-xtra, .php li.ln-xtra, .php div.ln-xtra {background-color: #ffc;}
 .php span.xtra { display:block; }
