--- a/govonokod-copypasta/trunk/govonokod-copypasta/web/css/main.css
+++ b/govonokod-copypasta/trunk/govonokod-copypasta/web/css/main.css
@@ -1,10 +1,10 @@
 #b-left {
   clear: left;
-  float: left;
-  width: 230px; margin: 25px 10px 10px 0;
+  float: right;
+  width: 230px; margin: 25px 0 10px 0;
 }
 #b-center {
-  margin: 25px 10px 10px 260px;
+  margin: 25px 260px 10px 0;
 }
 #b-left, #b-center { font-size: 85%; }
 
@@ -83,7 +83,7 @@ noindex:-o-prefocus, .rounded-svg {
 
 .w100 {width: 100%}
 
-select {width: 250px; padding: 2px; height: 20px;}
+select {width: 250px; padding: 2px; height: 24px;}
 textarea {width: 100%; height: 350px;}
 td, th {padding: 3px; vertical-align: top;}
 th {padding-top: 6px; }
