--- a/trunk/govnoquoter/www/templates/css/style.css
+++ b/trunk/govnoquoter/www/templates/css/style.css
@@ -109,7 +109,17 @@ ul.sub-menu li.right{background:url(../images/sub-menu-right.png) top left no-re
 
 .rate {
     float: right;
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.rate_plus {
+    color: #41AF0A;
+}
+
+.rate_minus {
+    color: #EF2C34;
+    font-size: 15px;
 }
 
 div.footer {
