--- a/govonokod-copypasta/trunk/govonokod-copypasta/web/css/main.css
+++ b/govonokod-copypasta/trunk/govonokod-copypasta/web/css/main.css
@@ -12,7 +12,7 @@ pre {font-size: 130%; border: 1px outset;  margin-bottom: 25px; overflow: auto;}
 pre ol, pre li {list-style-type: decimal-leading-zero; list-style-position: inside;}
 pre div {display: inline;}
 
-h2.green {font: bold 110% Tahoma, sans-serif; background-color: #439151; padding: 3px 0 3px 10px; color: #fff; margin-bottom: 5px;}
+h2 {font: bold 120% Arial, Tahoma, sans-serif;padding: 3px 0; color: #000; margin-bottom: 5px;}
 
 
 body {
@@ -44,13 +44,31 @@ a.header:link, a.header:visited {
   color:#2F2419;
   text-transform:uppercase;
   text-decoration:none;
+  float: left;
 }
 a.header:link img, a.header:visited img
 {
   vertical-align:baseline
 }
 
-ul.menu {overflow: hidden;}
+.add-new-ico {
+  float: left;
+  margin: 59px 8px 0 100px;
+  text-decoration: none;
+}
+
+body a.add-new {
+  display: block;
+  font-size: 15px;
+  margin-top: 60px;
+  color: #fff; 
+}
+
+body a.add-new:hover {
+  color: #DD8C3E;
+}
+
+ul.menu {overflow: hidden; clear: left;}
 ul.menu li {
   font-size:18px;
   display:block;
@@ -91,3 +109,8 @@ th {padding-top: 6px; }
 #copypasta_delete_at {width: 180px; padding: 2px;}
 #remember {vertical-align: middle;}
 #submit {font: bold 150% Tahoma, Arial, sans-serif; margin-top: 15px; padding: 5px 15px;}
+*:first-child+html .rounded
+{
+    border: 1px solid #999 !important;
+    background-color: #fff !important;
+}
