обновили prototype до версии 1.6rc2 камменты теперь работают еще и в ie7/8

--- a/govnoquoter/www/templates/css/style.css
+++ b/govnoquoter/www/templates/css/style.css
@@ -553,6 +553,11 @@ form p input#remember
 	margin: 0 0 0 0.7em;
 }
 
+form dl.errors dd ol
+{
+	color: red;
+}
+
 /* Pagination classes */
 
 ul.pagination
