--- a/trunk/govnoquoter/www/templates/css/style.css
+++ b/trunk/govnoquoter/www/templates/css/style.css
@@ -351,6 +351,16 @@ p#entrance
 	color: #888;
 }
 
+.posts .hentry .entry-content img.preloader
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	padding: 0;
+	background: url(../images/codeload.gif) no-repeat;
+}
+
 div.entry-comments
 {
 	margin: 0.8em 0 0 0;
