--- a/trunk/govnoquoter/www/templates/css/style.css
+++ b/trunk/govnoquoter/www/templates/css/style.css
@@ -544,6 +544,15 @@ div.entry-comments ul .hcomment .entry-comment
 	font-size: 1em;
 }
 
+div.entry-comments span.rss a
+{
+    background: #fff url(../images/comments-rss.png) no-repeat;
+
+	width: 32px;
+	height: 32px;
+	padding-left: 1.5em;
+}
+
 /* Form styles */
 
 form
